refactoring message publish architect + add session token and master token feature

--- a/app/views/slide/index.html.erb
+++ b/app/views/slide/index.html.erb
@@ -3,7 +3,7 @@
   <div id="zeroclipbtn" class="btn" data-clipboard-text="Copy me!"> Yank </div>
 </div>
 <div class="slide">
-  <div style="display:none;" id='event-server'><%= Settings.defaults[:event_server] %></div>
+  <div style="display:none;" id='event-server'><%= Settings.eventserv %></div>
   <div style="display:none;" id='slug-name'><%= @slide.slug %></div>
   <div class="main-player">
     <div class="header primary-color">
