--- a/app/views/slide/viewer/index.html.erb
+++ b/app/views/slide/viewer/index.html.erb
@@ -1,6 +1,8 @@
 <meta name="session_channel" content="<%=channel_name%>">
 <meta name="session_event_server" content="<%=Settings.eventserv%>">
 <meta name="session_token" content="<%= session_token%>">
+<meta name="session_slug" content="<%= slug %>">
+<meta name="session_host" content="<%= host %>">
 
 <div class='left-sidebar span6'>
   <div class="main-player">
