--- a/app/assets/stylesheets/slide/viewer.css.scss
+++ b/app/assets/stylesheets/slide/viewer.css.scss
@@ -40,17 +40,15 @@ div#asking-wrap {
   width: 30px;
 }
 
-.vote-up {
+.votedown, .voteup {
+  display: block;
+  margin: 0 auto;
   width: 100%;
   height: 50%;
-  background-color: red; 
 }
 
-.vote-down {
-  width: 100%;
-  height: 50%;
-  background-color: blue; 
-}
+.voteup {background: blue;}
+.votedown {background: red;}
 
 .questioncell .questioncontent {
   float: left  
