--- a/app/views/slide/index.html.erb
+++ b/app/views/slide/index.html.erb
@@ -47,7 +47,7 @@
       </div>
       <div class='img loading' id='streaming-gif' style='display:none;'><img src='/assets/streamload.gif'></div>
       <div class='img loading' id='pause-gif' style='display:none;'><img src='/assets/streampause.gif'></div>
-      <div id="questions-list">
+      <div id="questionslist">
       </div>
   </div>
 </div>
