--- a/app/views/devise/registrations/edit.html.haml
+++ b/app/views/devise/registrations/edit.html.haml
@@ -4,8 +4,11 @@
       Edit #{resource_name.to_s.humanize}
     = form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => { :method => :put }) do |f|
       = devise_error_messages!
+      = f.text_field :slideshare_user_name,     |
+        :placeholder => "Slideshare user name"  |
       = f.text_field :username, :placeholder => "Username"
       = f.text_field :name, :placeholder => "Name"
+
       = f.email_field :email, :placeholder => "Email address", :disabled => true
       = f.password_field :password,                                            |
         :placeholder => "password (leave blank if you dont want to change it)" |
@@ -19,3 +22,17 @@
       = link_to "Cancel my account", registration_path(resource_name), |
         :class => "btn btn-danger submit",                             |
         :confirm => "Are you sure?", :method => :delete                |
+
+:javascript
+  (function($){
+    $(document).ready(function() {
+      if (navigator.userAgent.toLowerCase().indexOf("chrome") >= 0) { //remove auto-fill chrome default
+        $('input:-webkit-autofill').each(function(){
+          var text = $(this).val();
+          var name = $(this).attr('name');
+          $(this).after(this.outerHTML).remove();
+          $('input[name=' + name + ']').val(text);
+        });
+      }
+    });
+  })(jQuery);
